# xnetty

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  PLAN.md  README.md
.github/workflows/: ci.yml
bench/: bench.sh  http_bench.cpp  pipeline_bench.cpp  response_bench.cpp  ssl_bench.cpp
bunserver/bun-native/: README.md  index.ts  package.json
bunserver/elysia/: README.md  index.ts  package.json
cmake/: tidy_config.h.in
examples/: bench_server.cpp  bigstring_demo.cpp  demo.cpp  hello_world.cpp  mixed_server.cpp  outbound_demo.cpp  rest_api.cpp  ssl_server.cpp  state_demo.cpp  ws_chat.cpp  ws_server.cpp  xnetty-cert.pem  xnetty-key.pem
include/xnetty/: xnetty.h
include/xnetty/bootstrap/: server_bootstrap.h
include/xnetty/buffer/: byte_buf.h
include/xnetty/channel/: channel.h  channel_handler_context.h  channel_pipeline.h  connection.h  context.h  handler.h
include/xnetty/common/: error.h  logger.h  metrics.h  result.h  time_util.h  token_bucket.h
include/xnetty/event/: boss_loop.h  event_loop.h  event_loop_group.h  poller.h  timer_wheel.h  worker_loop.h
include/xnetty/http/: compressor_handler.h  http_codec.h  http_request.h  http_response.h  http_server_handler.h  http_status.h  router.h  static_file_handler.h
include/xnetty/ssl/: ssl_handler.h
include/xnetty/util/: base64.h  gzip.h  sha1.h
include/xnetty/websocket/: topic_tree.h  web_socket.h  websocket_codec.h  websocket_handler.h  ws_handshake.h  ws_upgrade_handler.h
rustserver/: Cargo.toml
rustserver/axum-echo/: Cargo.toml
rustserver/axum-echo/src/: main.rs
rustserver/hyper-echo/: Cargo.toml
rustserver/hyper-echo/src/: main.rs
src/bootstrap/: server_bootstrap.cpp
src/buffer/: byte_buf.cpp
src/channel/: channel.cpp  channel_pipeline.cpp  context.cpp
src/common/: error.cpp  logger.cpp  metrics.cpp  token_bucket.cpp
src/event/: boss_loop.cpp  event_loop.cpp  event_loop_group.cpp  poller.cpp  timer_wheel.cpp  worker_loop.cpp
src/http/: compressor_handler.cpp  http_codec.cpp  http_request.cpp  http_response.cpp  http_server_handler.cpp  http_status.cpp  router.cpp  static_file_handler.cpp
src/ssl/: ssl_handler.cpp
src/util/: base64.cpp  gzip.cpp  sha1.cpp
src/websocket/: topic_tree.cpp  web_socket.cpp  websocket_codec.cpp  websocket_handler.cpp  ws_handshake.cpp  ws_upgrade_handler.cpp
tests/: bootstrap_test.cpp  byte_buf_edge_test.cpp  byte_buf_extreme_test.cpp  byte_buf_test.cpp  compression_test.cpp  context_test.cpp  error_test.cpp  event_loop_test.cpp  gzip_test.cpp  http_codec_test.cpp  http_extreme_test.cpp  http_integration_test.cpp  http_stress_test.cpp  http_test.cpp  logger_test.cpp  metrics_test.cpp  router_edge_test.cpp  router_test.cpp  ssl_handler_fuzz_test.cpp  ssl_handler_test.cpp  static_file_test.cpp  timer_wheel_stress_test.cpp  timer_wheel_test.cpp  token_bucket_stress_test.cpp  token_bucket_test.cpp  topic_tree_test.cpp  websocket_codec_test.cpp  websocket_test.cpp  ws_handshake_test.cpp  ws_pubsub_test.py
third_part/llhttp/: CMakeLists.txt  libllhttp.pc
